exclude non representative labels

--- a/first_processing.ipynb
+++ b/first_processing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -20,7 +20,7 @@
             "  from pandas.core import (\n",
             "[nltk_data] Downloading package stopwords to\n",
             "[nltk_data]     C:\\Users\\RAR9\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         },
         {
@@ -29,7 +29,7 @@
               "True"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -561,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "CvC7JBlrBnAm"
       },
@@ -1511,7 +1511,113 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Les classes sont trés désequilibrés, il s'agit d'une information clé que l'on devra prendre en compte dans la suite du projet"
+        "## Les classes sont trés désequilibrés, il s'agit d'une information clé que l'on devra prendre en compte dans la suite du projet. Regardons plus en detail"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 6) Pourcentage de représentation des classes par rapport a la classe la plus présente. On pourra envisager d'enlever certaines classes (trés peu de données)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "label\n",
+              "Credit reporting, credit repair services, or other personal consumer reports    100.000000\n",
+              "Debt collection                                                                  49.102065\n",
+              "Mortgage                                                                         26.118326\n",
+              "Credit card or prepaid card                                                      19.127348\n",
+              "Checking or savings account                                                      11.818667\n",
+              "Credit reporting                                                                  9.575952\n",
+              "Student loan                                                                      8.921751\n",
+              "Money transfer, virtual currency, or money service                                5.907818\n",
+              "Credit card                                                                       5.710769\n",
+              "Vehicle loan or lease                                                             4.747050\n",
+              "Bank account or service                                                           4.512411\n",
+              "Payday loan, title loan, or personal loan                                         3.266155\n",
+              "Consumer Loan                                                                     2.870845\n",
+              "Payday loan                                                                       0.529303\n",
+              "Money transfers                                                                   0.453818\n",
+              "Prepaid card                                                                      0.439570\n",
+              "Other financial service                                                           0.088520\n",
+              "Virtual currency                                                                  0.004850\n",
+              "Name: count, dtype: float64"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "label_counts = data_complaints['label'].value_counts()\n",
+        "\n",
+        "max_count = label_counts.max()\n",
+        "\n",
+        "label_percentages = (label_counts / max_count) * 100\n",
+        "\n",
+        "label_percentages"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5 classes representent moins d'1% de données par rapport à la classe la plus présente, on peut les exclure car difficiles à considerer comme distinctions pour le modèle ( pas assez de données)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "threshold = max_count * 0.01\n",
+        "\n",
+        "classes_to_exclude = label_counts[label_counts < threshold].index\n",
+        "\n",
+        "data_complaints = data_complaints[~data_complaints['label'].isin(classes_to_exclude)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "label\n",
+              "Credit reporting, credit repair services, or other personal consumer reports    329868\n",
+              "Debt collection                                                                 161972\n",
+              "Mortgage                                                                         86156\n",
+              "Credit card or prepaid card                                                      63095\n",
+              "Checking or savings account                                                      38986\n",
+              "Credit reporting                                                                 31588\n",
+              "Student loan                                                                     29430\n",
+              "Money transfer, virtual currency, or money service                               19488\n",
+              "Credit card                                                                      18838\n",
+              "Vehicle loan or lease                                                            15659\n",
+              "Bank account or service                                                          14885\n",
+              "Payday loan, title loan, or personal loan                                        10774\n",
+              "Consumer Loan                                                                     9470\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data_complaints['label'].value_counts()"
       ]
     },
     {
@@ -1607,12 +1713,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## "
+        "## 7) On sauvegarde ce premier preprocessing sur le jeu de donnée initial."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 17,
       "metadata": {
         "id": "Lh7BEW1iuInE"
       },
