update first preprocessing with some corrections

--- a/first_processing.ipynb
+++ b/first_processing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -11,29 +11,7 @@
         "id": "WKDUFvZI1QHd",
         "outputId": "44a9eb45-850d-4e81-ec81-e0a6671b2bca"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Users\\RAR9\\AppData\\Local\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-            "  from pandas.core import (\n",
-            "[nltk_data] Downloading package stopwords to\n",
-            "[nltk_data]     C:\\Users\\RAR9\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "from tqdm.auto import tqdm\n",
@@ -57,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,16 +43,7 @@
         "id": "3yC648vq2OQI",
         "outputId": "b40e22aa-f4d7-45ba-f2b7-d77445644596"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\RAR9\\AppData\\Local\\Temp\\ipykernel_29868\\66759690.py:1: DtypeWarning: Columns (9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  data = pd.read_csv('complaints.csv')\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "data = pd.read_csv('complaints.csv')"
       ]
@@ -190,18 +159,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2) On enleve garde que les 2 colonnes qui nous interessent: le recours et le produit associé"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "es-ODtDi4g-M"
-      },
-      "outputs": [],
-      "source": [
-        "data_complaints = data[['Consumer complaint narrative', 'Product' ]]"
+        "## 2) On garde que les 2 colonnes qui nous interessent: le recours et le produit associé"
       ]
     },
     {
@@ -338,6 +296,7 @@
         }
       ],
       "source": [
+        "data_complaints = data[['Consumer complaint narrative', 'Product' ]]\n",
         "data_complaints"
       ]
     },
@@ -358,17 +317,7 @@
       "source": [
         "map = {\"Consumer complaint narrative\": \"text\",\n",
         "       \"Product\": \"label\"\n",
-        "      }"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "EMTDT_DZ8szR"
-      },
-      "outputs": [],
-      "source": [
+        "      }\n",
         "data_complaints = data_complaints.rename(columns=map)"
       ]
     },
@@ -431,17 +380,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "HRRq0A96AXPu"
-      },
-      "outputs": [],
-      "source": [
-        "nan_counts = data_complaints.isna().sum()"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 37,
       "metadata": {
         "colab": {
@@ -464,7 +402,8 @@
         }
       ],
       "source": [
-        "# Tracé du graphe\n",
+        "nan_counts = data_complaints.isna().sum()\n",
+        "\n",
         "plt.figure(figsize=(8, 6))\n",
         "nan_counts.plot(kind='bar')\n",
         "plt.title('Nombre de valeurs NaN par colonne')\n",
@@ -479,17 +418,6 @@
       "metadata": {},
       "source": [
         "## Il y'en a énormément, autour de la moitié du jeu de donnée, j'ai décidé de les supprimer, on gardera pour l'instant autour de 800000 données"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 39,
-      "metadata": {
-        "id": "_sHbrjPsAhyY"
-      },
-      "outputs": [],
-      "source": [
-        "data_complaints = data_complaints.dropna()"
       ]
     },
     {
@@ -549,6 +477,7 @@
         }
       ],
       "source": [
+        "data_complaints = data_complaints.dropna()\n",
         "skim(data_complaints)"
       ]
     },
@@ -557,17 +486,6 @@
       "metadata": {},
       "source": [
         "## 5) On regarde la repartition des labels dans le jeu de donnée (de 700000 données) pour avoir une idée sur l'equilibre des classes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 41,
-      "metadata": {
-        "id": "CvC7JBlrBnAm"
-      },
-      "outputs": [],
-      "source": [
-        "label_counts = data_complaints['label'].value_counts().reset_index()\n"
       ]
     },
     {
@@ -1503,6 +1421,8 @@
         }
       ],
       "source": [
+        "label_counts = data_complaints['label'].value_counts().reset_index()\n",
+        "\n",
         "labels_repartition = px.bar(label_counts, x='label', y='count', title='Repartition des Labels dans le Dataframe', width=1000, height=700)\n",
         "labels_repartition.show()"
       ]
@@ -1713,7 +1633,85 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8) On sauvegarde ce premier preprocessing sur le jeu de donnée initial."
+        "## 8) Verifions s'il y'a des NaN apparu avec le cleaning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>text</th>\n",
+              "      <th>label</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>62882</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Debt collection</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>698037</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Debt collection</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       text            label\n",
+              "62882   NaN  Debt collection\n",
+              "698037  NaN  Debt collection"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "non_str_indices = data_complaints[data_complaints['text'].apply(lambda x: not isinstance(x, str))].index\n",
+        "non_str_rows = data_complaints.loc[non_str_indices]\n",
+        "non_str_rows"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data_complaints.drop(index=non_str_indices, inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 9) On sauvegarde ce premier preprocessing sur le jeu de donnée initial."
       ]
     },
     {
@@ -1728,15 +1726,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## 8) Comparons les caractéristiques du dataset initial (initial mais sans les NaN) avec celui nettoyé  :\n",
-        "## - sur la longueur moyenne du texte\n",
-        "## - sur le nombre de mots uniques "
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -1747,8 +1736,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 10) Comparons les caractéristiques du dataset initial (initial mais sans les NaN) avec celui nettoyé  :\n",
+        "## - sur la longueur moyenne du texte\n",
+        "## - sur le nombre de mots uniques "
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1784,12 +1782,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9) Visualisons la distribution de la longueur des textes pour les 2 jeux de données (sur l'ensemble des classes)"
+        "## Il y'a beaucoup moins de mots et les textes sont plus courts en moyenne. Le cleaning est impactant sur ces données"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 11) Visualisons la distribution de la longueur des textes pour les 2 jeux de données (sur l'ensemble des classes)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1850,6 +1855,7 @@
       "metadata": {},
       "source": [
         "## On peut voir que la longueur maximale des texte a eté diminué. Il pourrai s'agir des espaces et des caractères spéciaux et stop words enlevés.\n",
+        "## Il y'a plus de texte court qu'avant\n",
         "## La distribution ressemble à une Khi-deux avec un faible degré de liberté. Mais cela n'est pas une information vraiment exploitable pour notre projet"
       ]
     },
@@ -1857,7 +1863,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Nous continuerons notre analyse dans le second preprocessing (autre fichier)"
+        "## Pour ne pas avoir un notebook trop long, nous continuerons notre analyse dans le second preprocessing (autre fichier)"
       ]
     }
   ],
