reorganize folders and add some comments

--- a/data_exploration/second_preprocessing.ipynb
+++ b/data_exploration/second_preprocessing.ipynb
@@ -237,7 +237,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## On voit qu'il y'a des valeurs aberrantes, certaines textes ont des valeurs supérieurs à 4000 de taille (selon le .split())\n",
+    "## La mediane est approximativement la meme pour chaque label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On voit qu'il y'a des valeurs aberrantes, certains textes ont des valeurs supérieurs à 4000 de taille (selon le .split())\n",
     "## On pourrai ausssi calculer la longueur grace à des tokens d'un Tokenizer pre entrainé\n"
    ]
   },
@@ -331,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Certains label ont plus de 10% de seque,ces 'xx...x' dans leur texte, on les enleve."
+    "## Certains label ont plus de 10% de sequences 'xx...x' dans leur texte, on les enleve."
    ]
   },
   {
@@ -869,6 +876,39 @@
    ],
    "source": [
     "visualize_keywords(data_complaints)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Les mots account, payment, apparaisent dans pusieurs labels\n",
+    "## le mot credit apparait uniquement dans 2 labels\n",
+    "## Examinons un peu plus les mots uniques a un label qui peuvent etre discriminants dans le modèle à utiliser :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On va utiliser une methode naive, on va stocker les mots qui ne se repetent pas souvent dans la visualisation précedente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mots_discriminants = ['fee', 'check', 'car', 'vehicl', 'credit', 'card', 'report', 'equifax', 'experian', 'debt', 'collect', 'transfer', 'money', 'paypal', 'mortgag', 'home', 'interest', 'payday', 'student', 'navient']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## On pourra enrichir notre espace de dimensions (feature space) avec la présence significative/ou non de chacun de ces mots dans un text\n",
+    "## On l'utilisera comme comparatif dans un deuxieme temps afin de voir la valeur ajouté de cela"
    ]
   }
  ],
